examples/preprocessor/dq_preproc_test1.dq
// single line comment: this is a dq test program

/*
  multi
  line
  comment
*/

#{opt blockmode braces}

// #{opt inactive}  // directive in comment

#{ifdef LINUX}

  var platformvar : int = 1;

  #{define LIN}

#{elifdef WINDOWS}

  var platformvar : int = 2;
  #{ifdef WINVALAMI}
  #{else}
  #{endif}

#{else}

  // inactive code test
  /*
    multi-line comment
  */

  var s : stringa = " #{endif} ";  // #{endif} in string and comment

  varxxx blabla;  // this is an invalid statement

  var platformvar : int = 3;

#{endif}

#{ifdef LIN}

   var lin_var : int = 123;

#{endif}

#{define LIN}  // error

var globvar : int;

// the second

varx gvar2 : int = 6;  // value

/* some more comment

  */  var gvar3 : intx = 31;

#{include "dq_preproc_inc1.dq"}

// include once more, with the other quotes

#{include 'dq_preproc_inc1.dq' }


var gvar4 : int = 99;